--- a/01-BEM-metodika/01-Priklad-1/style.css
+++ b/01-BEM-metodika/01-Priklad-1/style.css
@@ -16,3 +16,66 @@ h2 {
 	#0077ff			primární barva
 	#c0c0c0			sekundární barva
 */
+
+
+:root{
+	--c-primary: #0077ff;
+	--c-secundary: #c0c0c0;
+}
+
+.button{
+	font-size: 16px;
+	padding: 10px 20px;
+	border: 1px solid grey;
+	background-color: plum;
+}
+
+.button--primary{
+	background-color: var(--c-primary);
+	color: white;
+	border-color: var(--c-primary);
+}
+
+.button--secundary{
+	background-color: var(--c-secundary);
+	color: white;
+	border-color: var(--c-secundary);
+}
+
+.button--big{
+	font-size: 24px;
+	padding: 15px 30px;
+}
+
+.photo{
+	margin: 0;
+	padding: 20px;
+	display: inline-block;
+	background-color: #f5f5f5;
+}
+
+.photo--inverted{
+	background-color: black;
+}
+
+.photo__image{
+	display: block;
+}
+
+.photo__caption{
+	font-style: italic;
+	margin-top: 10px;
+}
+
+.photo--inverted .photo__caption{
+	color: white;
+}
+
+.photo__image--border{
+	border: 5px solid var(--c-primary);
+}
+
+.photo__quote{
+	color: purple;
+	margin-top: 10px;
+}
